--- a/contact.html
+++ b/contact.html
@@ -426,7 +426,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 	<!-- Easing JS -->
 	<script src="js/easing.js"></script>
 	<!-- Google Map JS -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnhgNBg6jrSuqhTeKKEFDWI0_5fZLx0vM"></script>	
+	<script src="https://maps.googleapis.com/maps/api/js?key="></script>	
 	<script src="js/gmap.min.js"></script>
 	<script src="js/map-script.js"></script>
 	<!-- Active JS -->
